--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif !important;
     color: var(--text-color);
 }
 
@@ -54,7 +54,7 @@ body {
 }
 
 .auth-desc {
-    font-size: 15px;
+    font-size: 18px;
     color: var(--text-light);
     margin-bottom: 30px;
 }
